# jacky

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  cpp.cppcheck  test
asm/: CMakeLists.txt
common/: CMakeLists.txt  cpu.cpp  cpu.h  generate_resolve.py  instructions.h  logger.cpp  logger.h  register.h
common/cpus/: CMakeLists.txt
common/cpus/v1/: CMakeLists.txt  v1.cpp  v1.h
exec/: CMakeLists.txt  exec.h  jacky-exec.h  main.cpp
tests/: CMakeLists.txt  Hello_World.j  cpu_tests.cpp  registers_tests.cpp
unused/: logger.cpp
